--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h2 {
 
 .quote-box {
     background-color: #E5E7EB;
-    padding: 9rem 20%;
+    padding: 7rem 25%;
 }
 
 .quote-box p {
@@ -122,4 +122,43 @@ h2 {
     display: block;
     font-weight: 700;
     text-align: right;
+}
+
+.section-sign-up {
+    padding: 10rem 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-action {
+    background-color: #3882F6;
+    padding: 2em 0;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.section-action div {
+    flex-grow: auto;
+}
+
+
+.section-action div h3 {
+    font-size: 18px;
+    color: white;
+}
+
+.section-action div p {
+    font-size: 12px;
+    color: white;
+}
+
+.section-action button {
+    padding: .4rem 1.5rem;
+    color: #f9faf8;
+    background-color: #3882F6;
+    border-radius: 5px;
+    border: solid white 2px;
 }
